# Lab4_Parallel_Computing

./: CMakeLists.txt  Client.cpp  Server.cpp
CommandHandler/: CommandHandler.cpp  CommandHandler.h
MatrixOperations/: MatrixOperations.cpp  MatrixOperations.h
